[metadata]
name = pyplanpro
description = Task scheduler for python
author = Jacob Østergaard Nielsen
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
url = https://github.com/Oestergaard-A-S/PyPlanPro
version = 0.1.0
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)


[options]
packages = find:
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0

