[metadata]
name = planbee
description = production / job shop / resource scheduler for python
author = Jacob Østergaard Nielsen
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
url = https://github.com/Yacobolo/PlanBee
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License


[options]
packages = find:
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0

