[versioneer]
VCS = git
style = pep440
versionfile_source = src/planbee/_version.py
versionfile_build = planbee/_version.py
tag_prefix =
parentdir_prefix =

[options]
packages = find:
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0


